// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CategoryCard > Show Basic 1`] = `
"<a href="/search?categoryOneOf=PHOTOGRAPHY&amp;contentType=EVENTS" class="max-w-xs rounded-lg overflow-hidden bg-center bg-no-repeat bg-cover shadow-lg relative group">
  <picture class="brightness-50">
    <source srcset="/img/categories/photography.webp 2x, /img/categories/photography.webp" media="(min-width: 1000px)">
    <source srcset="/img/categories/photography.webp 2x, /img/categories/photography-small.webp" media="(min-width: 300px)"><img class="w-full h-36 w-36 md:h-52 md:w-52 object-cover" src="/img/categories/photography.webp" srcset="/img/categories/photography-small.webp " width="384" height="384" alt="" loading="lazy">
  </picture>
  <div class="px-3 py-1 absolute left-0 bottom-0">
    <h2 class="group-hover:text-slate-200 font-semibold text-white tracking-tight text-xl mb-3">Hello</h2>
  </div>
  <!--v-if-->
</a>"
`;

exports[`CategoryCard > Show Details 1`] = `
"<a href="/search?categoryOneOf=OUTDOORS_ADVENTURE&amp;contentType=EVENTS" class="max-w-xs rounded-lg overflow-hidden bg-center bg-no-repeat bg-cover shadow-lg relative group">
  <picture class="brightness-50">
    <source srcset="/img/categories/outdoors_adventure.webp 2x, /img/categories/outdoors_adventure.webp" media="(min-width: 1000px)">
    <source srcset="/img/categories/outdoors_adventure.webp 2x, /img/categories/outdoors_adventure-small.webp" media="(min-width: 300px)"><img class="w-full h-36 w-36 md:h-52 md:w-52 object-cover" src="/img/categories/outdoors_adventure.webp" srcset="/img/categories/outdoors_adventure-small.webp " width="384" height="384" alt="" loading="lazy">
  </picture>
  <div class="px-3 py-1 absolute left-0 bottom-0">
    <h2 class="group-hover:text-slate-200 font-semibold text-white tracking-tight text-xl mb-3">Hello</h2>
  </div><span class="absolute z-10 inline-flex items-center px-3 py-1 text-xs font-semibold text-white bg-black rounded-full right-2 top-2">5 events</span>
</a>"
`;
